[gd_scene load_steps=10 format=2]

[ext_resource path="res://drone/DroneLaser.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2, 0.1, 1 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.4, 0.2, 2 )

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
emission_enabled = true
emission = Color( 0, 0.623529, 1, 1 )
emission_energy = 2.5
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=4]
emission_enabled = true
emission = Color( 0.898039, 0.768627, 0.0666667, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.19
direction = Vector3( 0, 0, 0 )
spread = 180.0
initial_velocity = 5.0
scale_curve = SubResource( 6 )

[sub_resource type="CubeMesh" id=8]
size = Vector3( 0.5, 0.5, 0.5 )

[node name="DroneLaser" type="Area"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.05953 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.00443435 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Fire" type="AudioStreamPlayer3D" parent="."]
unit_size = 2.0

[node name="ExplosionParticles" type="Particles" parent="."]
material_override = SubResource( 4 )
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 0.92
randomness = 0.27
local_coords = false
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_DroneLaser_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
